code read write dat file