@@ -1,2 +1,5 @@
 # fxFile
 javafx form and file
+```
+--module-path /home/oem/sdk/javafx-sdk-18.0.1/lib --add-modules=javafx.controls,javafx.base,javafx.fxml,javafx.media,javafx.swing,javafx.web,javafx.graphics
+```
